--- a/HotelObliOpg/HotelObliOpg.csproj
+++ b/HotelObliOpg/HotelObliOpg.csproj
@@ -102,6 +102,7 @@
     </Compile>
     <Compile Include="Model\Booking.cs" />
     <Compile Include="Model\Guest.cs" />
+    <Compile Include="Model\GuestCatalogSingleton.cs" />
     <Compile Include="Model\Hotel.cs" />
     <Compile Include="Model\Room.cs" />
     <Compile Include="Persistency\PersistencyService.cs" />
