--- a/HotelObliOpg/HotelObliOpg.csproj
+++ b/HotelObliOpg/HotelObliOpg.csproj
@@ -107,6 +107,9 @@
     <Compile Include="Model\Room.cs" />
     <Compile Include="Persistency\PersistencyService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UpdateGuests.xaml.cs">
+      <DependentUpon>UpdateGuests.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ViewModel\GuestViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -134,7 +137,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="OpretGuest.xaml">
+    <Page Include="UpdateGuest.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UpdateGuests.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
